--- a/style_files/2DArtworks.css
+++ b/style_files/2DArtworks.css
@@ -1,9 +1,9 @@
 body{
-  background-color: #171a1c;
+  background-color: #050506;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
   overflow-x: hidden; /* Hide horizontal scrollbar */
-  margin: -9px;
+  margin: -4px;
 }
 
 a{
@@ -27,7 +27,6 @@ a.title:hover{
   margin:-9px;
   padding: 10px;
   gap: 20px;
-  margin: -9px;
 }
 
 .title{
@@ -37,7 +36,6 @@ a.title:hover{
   text-decoration: solid;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   border-radius: 200px;
-  margin: -9px;
 }
 
 .title:hover{
@@ -49,7 +47,6 @@ a.title:hover{
   padding: 5px;
   gap: 10px;
   border-radius: 100px;
-  margin: -9px;
 }
 
 .RmyStuff{
@@ -79,43 +76,191 @@ a.title:hover{
 
 .RmyStuff:hover{
   transform: scale(1.1);
-  width: 140px;
+  width: 145px;
   justify-content: center;
   background-color: rgb(27, 27, 27) ;
+}
+/* ----------- */
+.TopText-container{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 25px;
+  display: flex;
+  justify-content: center;
+  background-image: url(Luffy.png);
+  background-size: cover;
+  background-position: 1px -335px;
+  background-size: 100%;
+  margin-top: -5px;
+  background-repeat: no-repeat;
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.719);
+  background-blend-mode: overlay;
+
+  border-bottom: 6px solid #FF014F;
+}
+
+
+.TopText{
+  width: 500px;
+  border: 15px double #FF014F;
+  border-radius: 80px;
+  text-align:center;
+  color: white;
+  font-size: 15pt;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+.Illustration_Date{
+  color: rgb(204, 204, 204);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 /* ---------- */
 .Artworks-container{
   padding: 25px;
-  border: solid red;
+  /* border: solid red; */
   justify-content: center;
   display: flex;
-  gap: 20px;
+  gap: 5px;
+
+  border-bottom: 20px solid rgb(10, 9, 9);
 
   
-  background-image:url("Logos_BG.png");
-  background-repeat: no-repeat;
-  background-size:cover;
-  background-position: center;
-  background-size: 100%;
-  box-shadow: inset 0 0 0 2000px rgba(16, 17, 19, 0.934);
-  background-blend-mode: overlay;
+  background-image: url(Logos_BG.png);
+    background-size: cover;
+    background-position: center;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    box-shadow: inset 0 0 0 2000px rgba(16, 17, 19, 0.904);
+    background-blend-mode: overlay;
 
-  margin: -9px;
+  margin: 1px;
 }
 
 .Artworks-container div{
-  padding: 30px;
-  height: 270px;
-  width: 220px;
-  border: solid blue;
-  justify-content: center;
+  /* height: max-content;
+  width: max-content; */
+
+  height: 200px;
+  width: 400px;
+  overflow: hidden;
+  border: 5px solid rgb(0, 0, 0);
+  border-radius: 15px;
 }
 
+.Artworks-container div img:hover{
+  cursor: pointer;
+  transform: scale(1.05);
+}
+  
+
 div img{
-  width: 240px;
-  height: max-content;
-  justify-content: center;
-  place-self: center;
+  width: 500px;
+  border: solid red;
+  transition: transform 0.2s, border-radius 0.7s;
+
+}
+
+img {
+  filter: none;
+  -webkit-filter: grayscale(100%);
+  -moz-filter:    grayscale(100%);
+  -ms-filter:     grayscale(100%);
+  -o-filter:      grayscale(100%);
+  cursor: pointer;
+  transition: all 100ms ease;
+}
+img:hover {
+  filter: none;
+  -webkit-filter: grayscale(0%);
+  -moz-filter:    grayscale(0%);
+  -ms-filter:     grayscale(0%);
+  -o-filter:      grayscale(0%);
+}
+.newArt-text{
+  color: white;
+  font-size: 13pt;
+}
+
+.images_Dorohedoro{
+  height: 534px;
+    width: 796px;
+    margin-top: -43px;
+    margin-left: -249px;
+}
+
+.images_Agni{
+  margin-top: -101px;
+  margin-left: -28px;
+}
+
+.images_Chopper{
+  height: 702px;
+  width: 802px;
+  margin-top: -231px;
+  margin-left: -152px;
+}
+
+.images_SR{
+  height: 702px;
+    width: 802px;
+    margin-top: -97px;
+    margin-left: -263px;
+}
+
+.images_Luffy{
+  height: 787px;
+  width: 840px;
+  margin-top: -58px;
+  margin-left: -397px;
+}
+
+.images_Ram{
+  height: 787px;
+  width: 840px;
+  margin-top: -308px;
+  margin-left: -401px;
+}
+
+.images_Nago{
+  height: 835px;
+  width: 1127px;
+  margin-top: -212px;
+  margin-left: -575px;
+}
+
+.images_Todo{
+  height: 821px;
+  width: 679px;
+  margin-top: -109px;
+  margin-left: -97px;
+}
+
+.images_Yamato{
+  height: 588px;
+  width: 770px;
+  margin-top: -100px;
+  margin-left: -281px;
+}
+
+.images_Denji{
+  height: 768px;
+  width: 815px;
+  margin-top: -64px;
+  margin-left: -76px;
+}
+
+.images_Zoro{
+  height: 529px;
+  width: 765px;
+  margin-top: -78px;
+  margin-left: -174px;
+}
+
+.images_Katakuri{
+  height: 732px;
+  width: 845px;
+  margin-top: -311px;
+  margin-left: -264px;
 }
 /* --------- */
 .Artworks-container2{
@@ -150,17 +295,13 @@ div img{
   justify-content: center;
 
 }
-
-.Artworks-container:hover{
-cursor: pointer;
-}
-
 .Artworks-container2:hover{
 cursor: pointer;
 }
+/* -------------- */
+.watermark p{
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  color: rgb(104, 104, 104);
 
-.TopText{
-  border: solid red;
-  text-align:center;
-  color: white;
 }
